--- a/about.html
+++ b/about.html
@@ -42,10 +42,11 @@
 					<h4 >Hi there!</h4>
 					<p>
 					I'm Joaquín Metayer from Cordoba, Argentina.<br>
-				    Entrepreneur in the world of technology lover of simplicity.</p>
+				    Entrepreneur lover of simplicity.</p>
 				    
 				    <p>Currently in my career as a full stack developer within the <a href="https://www.soyhenry.com/">Soy Henry</a> bootcamp.<br>
-					During free time in my side project forex trading <a href="https://www.instagram.com/2388hc/">"2388HC"</a>.<br>
+					</p>
+					<p>
 					In <a href="./index">this</a> blog my thoughts, opinions, processes and all my experience.</p>
 					<p>
 					<ul>
