--- a/about.html
+++ b/about.html
@@ -42,13 +42,14 @@
 					<h4 >Hi there!</h4>
 					<p>
 					I'm Joaquín Metayer from Cordoba, Argentina.<br>
-				    Entrepreneur lover of simplicity.</p>
+				        A entrepreneur in search of creating solutions through technologies in a systematic and simple way on real world.
+					</p>
 				    
 				    <p>Currently in my career as a full stack developer within the <a href="https://www.soyhenry.com/">Soy Henry</a> bootcamp.<br>
-					</p>
-					<p>
+				    </p>
+				     <p>
 					In <a href="./index">this</a> blog my thoughts, opinions, processes and all my experience.</p>
-					<p>
+				     <p>
 					<ul>
 						<li><a href="https://github.com/joaquinmetayer" target="_blank">GitHub</a></li>
 						<!--<li><a href="">Linkedin</a></li> /!-->
@@ -57,7 +58,9 @@
 						<li><a href="https://api.whatsapp.com/send?phone=5493518024289" target="_blank">WhatsApp</a></li>
 						<li><a href="https://www.instagram.com/joaquinmetayer/" target="_blank">Instagram</a></li>
 					</ul>
-				    </p>
+				     </p>
+		                     <p>Simplicity is the big rule!
+		                     </p>
 				</section>
 			</main>
 		</body>
