--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 						<li><a href="https://www.instagram.com/joaquinmetayer/" target="_blank">Instagram</a></li>
 					</ul>
 				     </p>
-		                     <p>Simplicity is the big rule!
+		                     <p>Simplicity is big rule.
 		                     </p>
 				</section>
 			</main>
