change lenguage to spanish

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta property="twitter:title" content="" />
 	<meta name="twitter:site" content="@" />
 	<script type="application/ld+json"> </script>
-	<title>Joaquin Metayer - Personal Blog</title>
+	<title>Joaquin Metayer - Blog Personal</title>
 	<link rel="alternate" type="application/atom+xml" title="" href="/atom.xml">
 	<link rel="alternate" type="application/json" title="" href="http://localhost:4000/feed.json" />
 	<link rel="sitemap" type="application/xml" title="sitemap" href="/sitemap.xml" />
@@ -29,10 +29,10 @@
 			<nav role="navigation">
 				<ul>
 					<li>
-						<a href="./index.html" class="active">Writing</a>
+						<a href="./index.html" class="active">Posts</a>
 					</li>
 					<li>
-						<a href="./about.html" >About</a>
+						<a href="./about.html" >Sobre mi</a>
 					</li>
 				</ul>
 			</nav>
@@ -40,7 +40,7 @@
 		<section class="posts">
 			<ul>
 				<li>
-					<a href="./pag.html">This is a lorem ipsum page of a example</a>
+					<a href="./pag.html">Esto es una pagina con lorem ipsum com ejemplo</a>
 					<time>22-02-2000</time>
 				</li>
 					</ul>
