--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 		<section class="posts">
 			<ul>
 				<li>
+					<a href="./posts/probandosetupytomandounmate.html">Probando setup y tomando un mate</a>
+					<time>19-06-2022</time>
+				</li>
+				<li>
 					<a href="./posts/loremipsumdeejemplo.html">Lorem ipsum de post ejemplo</a>
 					<time>17-06-2022</time>
 				</li>
