--- a/about.html
+++ b/about.html
@@ -29,6 +29,9 @@
 			<nav role="navigation">
 				<ul>
 					<li>
+						<a href="./portfolio.html">Portfolio</a>
+					</li>
+					<li>
 						<a href="./index.html">Posts</a>
 					</li>
 					<li>
