--- a/portfolio.html
+++ b/portfolio.html
@@ -29,13 +29,16 @@
 			<nav role="navigation">
 				<ul>
 					<li>
-						<a href="./portfolio.html" class="active">Portfolio</a>
-					</li>
-					<li>
 						<a href="./index.html">Posts</a>
 					</li>
 					<li>
+						<a href="./portfolio.html" class="active">Portfolio</a>
+					</li>
+					<li>
 						<a href="./about.html">Sobre mi</a>
+					</li>
+					<li>
+						<a href="./contact.html">Contacto</a>
 					</li>
 				</ul>
 			</nav>
