--- a/about.html
+++ b/about.html
@@ -50,17 +50,21 @@
 					Soy Joaquín Metayer de Cordoba, Argentina.<br>
 					Un emprendedor en busqueda de crear soluciones de una forma simple.
 					</p>
-				    <p>Actualmente en mi carrera como desarrollador web full stack en <a href="https://www.soyhenry.com/">Soy Henry</a> bootcamp.<br>
-				    </p><!--<li><a href="">Linkedin</a></li> /!-->
+				    <p>Actualmente en mi carrera como desarrollador web full stack en <a href="https://www.soyhenry.com/">Soy Henry</a> bootcamp.
+				    <br>
+					En mis tiempos libres lo dedico a mi hobby y proyecto personal de trading llamado <a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC</a>.</p>
 					<p>Contactame por email <a href="mailto:joaquinmetayer@gmail.com" target="_blank">joaquinmetayer@gmail.com</a>, <a href="https://api.whatsapp.com/send?phone=5493518024289" target="_blank">WhatsApp</a> o <a href="https://t.me/joaquinmetayer" target="_blank">Telegram</a>.<br>
 					</p>
 					<p>
 					Si quieres saber más de mí, mira:
 					<ul>
+					<!--<li><a href="">Linkedin</a></li> /!-->
 					<li><a href="https://github.com/joaquinmetayer" target="_blank">GitHub</a></li>
 					<li><a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">YouTube Channel</a></li>
 					<li><a href="https://www.instagram.com/joaquinmetayer/" target="_blank">Instagram</a></li>
-					</ul>
+					<li><a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC</a></li>
+                    <li><a href="https://www.mql5.com/en/users/joaquinmetayer/seller" target="_blank">MQL5</a></li>
+				    </ul>
 					</p>
 				</section>
 			</main>
