nuevo texto en about

--- a/about.html
+++ b/about.html
@@ -47,12 +47,17 @@
 					<h2>Sobre mi</h2>
 					<h4 >Hola!</h4>
 					<p>
-					Soy Joaquín Metayer de Cordoba, Argentina.<br>
-					Un emprendedor en busqueda de crear soluciones de una forma simple.
+					Soy Joaquín Metayer de Cordoba, Argentina.
 					</p>
-				    <p>Actualmente en mi carrera como desarrollador web full stack en <a href="https://www.soyhenry.com/">Soy Henry</a> bootcamp.
-				    <br>
-					En mis tiempos libres lo dedico a mi hobby y proyecto personal de trading llamado <a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC</a>.</p>
+					<p>
+					Un emprendedor amante de la simpleza.
+					</p>
+				    <p>
+					Actualmente en mi carrera como desarrollador web full stack en <a href="https://www.soyhenry.com/">Soy Henry</a> bootcamp.
+					</p>
+					<p>
+					En mi tiempo libre lo dedico a mi hobby / proyecto personal de trading algoritmico llamado <a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC</a>, crear contenido en mi <a href="https://joaquinmetayer.github.io/personalblog" target="_blank">Blog Personal</a> y <a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">canal de YouTube</a> (en español) y a tomar mucho cafe!
+					</p>
 					<p>Contactame por email <a href="mailto:joaquinmetayer@gmail.com" target="_blank">joaquinmetayer@gmail.com</a>, <a href="https://api.whatsapp.com/send?phone=5493518024289" target="_blank">WhatsApp</a> o <a href="https://t.me/joaquinmetayer" target="_blank">Telegram</a>.<br>
 					</p>
 					<p>
@@ -60,7 +65,7 @@
 					<ul>
 					<!--<li><a href="">Linkedin</a></li> /!-->
 					<li><a href="https://github.com/joaquinmetayer" target="_blank">GitHub</a></li>
-					<li><a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">YouTube Channel</a></li>
+					<li><a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">Canal de YouTube</a></li>
 					<li><a href="https://www.instagram.com/joaquinmetayer/" target="_blank">Instagram</a></li>
 					<li><a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC</a></li>
                     <li><a href="https://www.mql5.com/en/users/joaquinmetayer/seller" target="_blank">MQL5</a></li>
