--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 					Actualmente en mi carrera como desarrollador web full stack en <a href="https://www.soyhenry.com/">Soy Henry</a> bootcamp.
 					</p>
 					<p>
-					En mi tiempo libre lo dedico a mi hobby / proyecto personal de trading algoritmico llamado <a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC</a>, crear contenido en mi <a href="https://joaquinmetayer.github.io/personalblog" target="_blank">Blog Personal</a> y <a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">canal de YouTube</a> (en español) y a tomar mucho cafe!
+					En mi tiempo libre lo dedico a mi hobby / proyecto personal de trading llamado <a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC</a>, crear contenido en mi <a href="https://joaquinmetayer.github.io/personalblog" target="_blank">Blog Personal</a> y <a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">canal de YouTube</a> (en español) y a tomar mucho cafe!
 					</p>
 					<p>Contactame por email <a href="mailto:joaquinmetayer@gmail.com" target="_blank">joaquinmetayer@gmail.com</a>, <a href="https://api.whatsapp.com/send?phone=5493518024289" target="_blank">WhatsApp</a> o <a href="https://t.me/joaquinmetayer" target="_blank">Telegram</a>.<br>
 					</p>
