titulo a cada pagina y nuevo post hola mundo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 	<main role="main">
 		<header role="banner">
-			<h1 >Joaquin Metayer</h1>
+			<h1>Joaquin Metayer</h1>
 			<nav role="navigation">
 				<ul>
 					<li>
@@ -45,6 +45,10 @@
 		</header>
 		<section class="posts">
 			<ul>
+				<li>
+					<a href="./posts/hola-mundo.html">Hola mundo</a>
+					<time>25-06-2022</time>
+				</li>
 				<li>
 					<a href="./posts/probandosetupytomandounmate.html">Probando setup y tomando un mate</a>
 					<time>19-06-2022</time>
