--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 	<meta property="twitter:title" content="" />
 	<meta name="twitter:site" content="@" />
 	<script type="application/ld+json"> </script>
-	<title>Joaquin Metayer</title>
+	<title>Sobre mi</title>
 	<link rel="alternate" type="application/atom+xml" title="" href="/atom.xml">
 	<link rel="alternate" type="application/json" title="" href="http://localhost:4000/feed.json" />
 	<link rel="sitemap" type="application/xml" title="sitemap" href="/sitemap.xml" />
@@ -25,7 +25,7 @@
 <body>
 	<main role="main">
 		<header role="banner">
-			<h1 >Joaquin Metayer</h1>
+			<h1>Joaquin Metayer</h1>
 			<nav role="navigation">
 				<ul>
 					<li>
