--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 	<meta property="twitter:title" content="" />
 	<meta name="twitter:site" content="@" />
 	<script type="application/ld+json"> </script>
-	<title>Joaquin Metayer</title>
+	<title>Portfolio</title>
 	<link rel="alternate" type="application/atom+xml" title="" href="/atom.xml">
 	<link rel="alternate" type="application/json" title="" href="http://localhost:4000/feed.json" />
 	<link rel="sitemap" type="application/xml" title="sitemap" href="/sitemap.xml" />
