agrego link video a hola mundo

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<section class="posts">
 			<ul>
 				<li>
-					<a href="./posts/hola-mundo.html">Hola mundo</a>
+					<a href="./posts/holamundo.html">Hola mundo</a>
 					<time>25-06-2022</time>
 				</li>
 				<li>
