--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<link rel="sitemap" type="application/xml" title="sitemap" href="/sitemap.xml" />
 	<link href="./favicon.png" rel="icon">
 	<link rel="stylesheet" href="./stylesheet.css">
+	<meta name="google-site-verification" content="zXHdI9dknjnG1kfpTrVoX5cByVv16WKNi4dtf-3uEV8" />
 </head>
 <body>
 	<main role="main">
