--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 <body>
 	<main role="main">
 		<header role="banner">
-			<h1 >Joaquin Metayer</h1>
+			<!---<h1 >Joaquin Metayer</h1>--->
 			<nav role="navigation">
 				<ul>
 					<li>
