--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -25,7 +25,7 @@
 <body>
 	<main role="main">
 		<header role="banner">
-			<!---<h1 >Joaquin Metayer</h1> --->
+			<!---<h1 >Joaquin Metayer</h1>--->
 			<nav role="navigation">
 				<ul>
 					<li>
