borrador sh prepcourse

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
 		</header>
 		<section class="posts">
 			<ul>
+				<!--
+				<li>
+					<a href="./posts/soyhenryprepcourse.html">Soy Henry Prep-Course</a>
+					<time>10-07-2022</time>
+				</li>
+				-->
 				<li>
 					<a href="./posts/holamundo.html">Hola mundo</a>
 					<time>25-06-2022</time>
