cambiando la descripcion del about

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 					Un emprendedor amante de la simpleza.
 					</p>
 				    <p>
-					Actualmente en mi carrera como desarrollador web full stack en <a href="https://www.soyhenry.com/">Soy Henry</a> bootcamp.
+					Actualmente estudiando para ser admitido en el bootcamp de <a href="https://www.soyhenry.com/">Soy Henry</a> como desarrollador full stack.
 					</p>
 					<p>
 					En mi tiempo libre lo dedico a mi hobby / proyecto personal de trading llamado <a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC</a>, crear contenido en mi <a href="https://joaquinmetayer.github.io/personalblog" target="_blank">Blog Personal</a> y <a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">canal de YouTube</a> (en español) y a tomar mucho cafe!
