--- a/portfolio.html
+++ b/portfolio.html
@@ -10,11 +10,11 @@
 <body>
 	<main role="main">
 		<header role="banner">
-			<h1>Joaquin Metayer</h1>
+			<h1><a href="./index.html">Joaquin Metayer</a></h1>
 			<nav role="navigation">
 				<ul>
 					<li>
-						<a href="./index.html">Posts</a>
+						<a href="./posts.html">Posts</a>
 					</li>
 					<li>
 						<a href="./portfolio.html" class="active">Portfolio</a>
@@ -32,6 +32,6 @@
 					<h2>Portfolio</h2>
 					<p>Cargando...</p>
 				</section>
-			</main>
-		</body>
-		</html>
+	</main>
+</body>
+</html>
