--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 					Actualmente estudiando de forma autodidacta full stack development.
 					</p>
 					<p>
-					En mi tiempo libre lo dedico a mi hobby / proyecto personal de trading llamado <a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC</a>, crear contenido en mi <a href="https://joaquinmetayer.github.io/personalweb" target="_blank">Web Personal</a> y <a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">canal de YouTube</a> (en español) y a tomar mucho cafe!
+					En mi tiempo libre lo dedico a mi hobby y proyecto personal de trading llamado <a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC</a>, crear contenido en mi <a href="https://joaquinmetayer.github.io/personalweb" target="_blank">Web Personal</a>, <a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">canal de YouTube</a> (en español) y a tomar mucho cafe!
 					</p>
 					<br>
 					<img src="./posts/img/Screen Shot 2022-06-25 at 23.45.58.png">
