--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 					Un emprendedor amante de la simpleza.
 					</p>
 				    <p>
-					Actualmente estudiando de forma autodidacta full stack development.
+					Actualmente estudiando de forma autodidacta full stack development en <a href="https://www.freecodecamp.org/">FreeCodeCamp</a>.
 					</p>
 					<p>
 					En mi tiempo libre lo dedico a mi hobby y proyecto personal de trading llamado <a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC</a>, crear contenido en mi <a href="https://joaquinmetayer.github.io/personalweb" target="_blank">Web Personal</a>, <a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">canal de YouTube</a> (en español) y a tomar mucho cafe!
@@ -57,6 +57,7 @@
 					<!--<li><a href="">Linkedin</a></li> /!-->
 					<li><a href="https://github.com/joaquinmetayer" target="_blank">GitHub</a></li>
 					<li><a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">Canal de YouTube</a></li>
+					<li><a href="https://joaquinmetayer.github.io/freecodecamp/">FreeCodeCamp Projects</a></li>
 					<li><a href="https://www.instagram.com/joaquinmetayer/" target="_blank">Instagram</a></li>
 					<li><a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC</a></li>
                     <li><a href="https://www.mql5.com/en/users/joaquinmetayer/seller" target="_blank">MQL5</a></li>
