--- a/about.html
+++ b/about.html
@@ -24,9 +24,6 @@
 					<li>
 						<a href="./about.html" class="active">Sobre mi</a>
 					</li>
-					<li>
-						<a href="./contact.html">Contacto</a>
-					</li>
 				</ul>
 			</nav>
 		</header>
@@ -35,28 +32,22 @@
 					<p><strong>Hola!</strong></p>
 					<p>
 					Soy Joaquín Metayer de Cordoba, Argentina.
-					</p>
-					<p>
+					<br>
 					Un emprendedor amante de la simpleza.
 					</p>
-				    <p>
-					Actualmente estudiando de forma autodidacta full stack development en <a href="https://www.freecodecamp.org/" target="_blank">FreeCodeCamp</a>.
-					</p>
-					<p>
-					En mi tiempo libre lo dedico a mi hobby y proyecto personal de trading llamado <a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC</a>, crear contenido en mi <a href="https://joaquinmetayer.github.io/personalweb" target="_blank">Web Personal</a>, <a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">canal de YouTube</a> (en español) y a tomar mucho cafe!
-					</p>
+					<p>Actualmente estudiando de forma autodidacta full stack development.<br>
+					Tengo un <a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">canal de YouTube</a> y un <a href="https://joaquinmetayer.github.io/personalweb/posts" target="_blank">blog personal</a> (en español).<br>
+					Mi gran hobby es el trading (<a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC</a>).</p>
 					<br>
 					<img src="./posts/img/Screen Shot 2022-06-25 at 23.45.58.png">
-					<br>
-					<p><strong>Contacto</strong></p>
+					<h2 id="contact">Contacto</h2>
 					<p>Email <a href="mailto:joaquinmetayer@gmail.com" target="_blank">joaquinmetayer@gmail.com</a>, <a href="https://api.whatsapp.com/send?phone=5493518024289" target="_blank">WhatsApp</a> o <a href="https://t.me/joaquinmetayer" target="_blank">Telegram</a>.<br>
 					</p>
-					<p>
-					Si quieres saber más de mí, mira:
+					<p><strong>Si quieres saber más de mí:</strong>
 					<ul>
 					<!--<li><a href="">Linkedin</a></li> /!-->
 					<li><a href="https://github.com/joaquinmetayer" target="_blank">GitHub</a></li>
-					<li><a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">Canal de YouTube</a></li>
+					<li><a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">YouTube</a></li>
 					<li><a href="https://joaquinmetayer.github.io/freecodecamp/" target="_blank">FreeCodeCamp Projects</a></li>
 					<li><a href="https://www.instagram.com/joaquinmetayer/" target="_blank">Instagram</a></li>
 					<li><a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC</a></li>
