--- a/about.html
+++ b/about.html
@@ -16,11 +16,6 @@
 					<li>
 						<a href="./posts.html">Posts</a>
 					</li>
-					<!--
-					<li>
-					<a href="./portfolio.html">Portfolio</a>
-					</li>
-				    -->
 					<li>
 						<a href="./about.html" class="active">Sobre mi</a>
 					</li>
@@ -35,23 +30,19 @@
 					<br>
 					Un emprendedor amante de la simpleza.
 					</p>
-					<p>Actualmente estudiando de forma autodidacta full stack development.<br>
-					Tengo un <a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">canal de YouTube</a> y un <a href="https://joaquinmetayer.github.io/personalweb/posts" target="_blank">blog personal</a> (en español).<br>
-					Mi gran hobby es el trading (<a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC</a>).</p>
+					<p>Actualmente iniciando mi carrera como desarrollador.<br>
+					Tengo un <a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">canal de YouTube</a> y un <a href="https://joaquinmetayer.github.io/personalweb/posts" target="_blank">blog</a>.<br>
 					<br>
 					<img src="./posts/img/Screen Shot 2022-06-25 at 23.45.58.png">
 					<h2 id="contact">Contacto</h2>
-					<p>Email <a href="mailto:joaquinmetayer@gmail.com" target="_blank">joaquinmetayer@gmail.com</a>, <a href="https://api.whatsapp.com/send?phone=5493518024289" target="_blank">WhatsApp</a> o <a href="https://t.me/joaquinmetayer" target="_blank">Telegram</a>.<br>
+					<p>Email <a href="mailto:joaquinmetayer@gmail.com" target="_blank">joaquinmetayer@gmail.com</a>
 					</p>
 					<p><strong>Si quieres saber más de mí:</strong>
 					<ul>
 					<!--<li><a href="">Linkedin</a></li> /!-->
 					<li><a href="https://github.com/joaquinmetayer" target="_blank">GitHub</a></li>
 					<li><a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">YouTube</a></li>
-					<li><a href="https://joaquinmetayer.github.io/freecodecamp/" target="_blank">FreeCodeCamp Projects</a></li>
 					<li><a href="https://www.instagram.com/joaquinmetayer/" target="_blank">Instagram</a></li>
-					<li><a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC</a></li>
-                    <li><a href="https://www.mql5.com/en/users/joaquinmetayer/seller" target="_blank">MQL5</a></li>
 				    </ul>
 					</p>
 				</section>
