--- a/about.html
+++ b/about.html
@@ -28,16 +28,15 @@
 					<p>
 					Soy Joaquín Metayer de Cordoba, Argentina.
 					<br>
-					Un emprendedor amante de la simpleza.
+					Emprendedor amante de la simpleza.
 					</p>
-					<p>Actualmente iniciando mi carrera como desarrollador.<br>
-					Tengo un <a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">canal de YouTube</a> y un <a href="https://joaquinmetayer.github.io/personalweb/posts" target="_blank">blog</a>.<br>
-					<br>
+					<p>Actualmente en mi carrera como desarrollador.<br>
+					Tengo un <a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">canal de YouTube</a> y un <a href="https://joaquinmetayer.github.io/personalweb/posts" target="_blank">blog</a>.</p>
 					<img src="./posts/img/Screen Shot 2022-06-25 at 23.45.58.png">
 					<h2 id="contact">Contacto</h2>
 					<p>Email <a href="mailto:joaquinmetayer@gmail.com" target="_blank">joaquinmetayer@gmail.com</a>
 					</p>
-					<p><strong>Si quieres saber más de mí:</strong>
+					<p><strong>Más de mí:</strong>
 					<ul>
 					<!--<li><a href="">Linkedin</a></li> /!-->
 					<li><a href="https://github.com/joaquinmetayer" target="_blank">GitHub</a></li>
