--- a/about.html
+++ b/about.html
@@ -27,11 +27,9 @@
 					<p><strong>Hola!</strong></p>
 					<p>
 					Soy Joaquín Metayer de Cordoba, Argentina.
-					<br>
-					Emprendedor amante de la simpleza.
 					</p>
-					<p>Actualmente en mi carrera como desarrollador.<br>
-					Tengo un <a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">canal de YouTube</a> y un <a href="https://joaquinmetayer.github.io/personalweb/posts" target="_blank">blog</a>.</p>
+					<p>Actualmente en mi carrera como desarrollador. Objetivo futuro de desarrollar en web3, pero como antes debo pasar por un proceso de aprendizaje... Estoy estudiando para Frontend, luego Fullstack y finalmente agregando las tecnologías más usadas en web3 como Python y Solidiy.</p>
+					<p>Tengo un <a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">canal de YouTube</a> y un <a href="https://joaquinmetayer.github.io/personalweb/posts" target="_blank">blog personal</a> (en español) donde documento todo mi proceso y hablo sobre tecnología y programación.</p>
 					<br>
 					<img src="./posts/img/Screen Shot 2022-06-25 at 23.45.58.png">
 					<h2 id="contact">Contacto</h2>
@@ -39,7 +37,7 @@
 					</p>
 					<p><strong>Más de mí:</strong>
 					<ul>
-					<!--<li><a href="">Linkedin</a></li> /!-->
+					<li><a href="https://www.linkedin.com/in/joaquinmetayer/">Linkedin</a></li>
 					<li><a href="https://github.com/joaquinmetayer" target="_blank">GitHub</a></li>
 					<li><a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">YouTube</a></li>
 					<li><a href="https://www.instagram.com/joaquinmetayer/" target="_blank">Instagram</a></li>
