--- a/posts.html
+++ b/posts.html
@@ -19,6 +19,9 @@
 					<li>
 						<a href="./about.html">Sobre mi</a>
 					</li>
+					<li>
+						<a href="./contact.html">Contacto</a>
+					</li>
 				</ul>
 			</nav>
 		</header>
