--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 					<p>
 					Soy Joaquín Metayer de Cordoba, Argentina.
 					</p>
-					<p>Actualmente en mi carrera como desarrollador. Objetivo futuro de desarrollar en web3, pero como antes debo pasar por un proceso de aprendizaje... Estoy estudiando para ser programador Fullstack (de forma autodidacta en FreeCodeCamp, tambien con mi mejor amigo google y realizando la carrera de Fullstack Developer en CoderHouse), y finalmente agregare las tecnologías más usadas en web3 a dia de hoy como lo son Python y Solidiy.</p>
+					<p>Actualmente en mi carrera como desarrollador. Objetivo futuro de hacerlo dentro de web3, pero como antes debo pasar por un proceso de aprendizaje... estudiando para ser Fullstack Developer (de forma autodidacta en FreeCodeCamp, con mi mejor amigo google y realizando la carrera de Fullstack Developer en CoderHouse), y finalmente se agregaran las tecnologías más usadas en web3 a dia de hoy como lo son Python y Solidiy.</p>
 					<p>Tengo un <a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">canal de YouTube</a> y un <a href="https://joaquinmetayer.github.io/personalweb/posts" target="_blank">blog personal</a> (en español) donde documento todo mi proceso y hablo sobre tecnología y programación.</p>
 					<br>
 					<img src="./posts/img/Screen Shot 2022-06-25 at 23.45.58.png">
