--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,7 @@
 					<li><a href="https://www.instagram.com/joaquinmetayer/" target="_blank">Instagram</a></li>
 					<br>
 					<li><a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC "Recuerdos de un EX Trader"</a></li>
+				    <li><a href="https://joaquinmetayer.github.io/streetphotoarchives/" target="_blank">Street Photo Archives</a></li>
 				    </ul>
 					</p>
 					<br>
