--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 					<li><a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">YouTube</a></li>
 					<li><a href="https://www.instagram.com/joaquinmetayer/" target="_blank">Instagram</a></li>
 					<br>
-					<li><a href="https://joaquinmetayer.github.io/streetph/" target="_blank">Street Photo Archives</a></li>
+					<li><a href="https://joaquinmetayer.github.io/pharchives/" target="_blank">Photo Archives</a></li>
 					<li><a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC "Recuerdos de un EX Trader"</a></li>
 				    </ul>
 					</p>
