--- a/posts.html
+++ b/posts.html
@@ -37,10 +37,10 @@
 				<li class="postli">
 					<a href="./posts/porquenohenry.html">Porque NO Soy Henry</a>
 				</li>
+			    -->
 				<li class="postli">
-					<a href="./posts/miweb.html">La creación de mi web y como tener una gratis</a>
+					<a class="postnl" href="./posts/holamundo.html">Hola mundo</a>
 				</li>
-				-->
 				<li class="postli">
 					<a class="postnl" href="./posts/probandosetupytomandounmate.html">Probando setup y tomando un mate</a>
 				</li>
