--- a/contact.html
+++ b/contact.html
@@ -29,19 +29,22 @@
 					<h2>Contacto</h2>
 					<p>Email <a href="mailto:joaquinmetayer@gmail.com" target="_blank">joaquinmetayer@gmail.com</a>
 					</p>
-					<p><strong>Más de mí:</strong>
-					<ul>
-					<li><a href="https://www.linkedin.com/in/joaquinmetayer/">Linkedin</a></li>
-					<li><a href="https://github.com/joaquinmetayer" target="_blank">GitHub</a></li>
+					<p>
+					<a href="https://www.linkedin.com/in/joaquinmetayer/">Linkedin</a>
 					<br>
-					<li><a href="https://joaquinmetayer.github.io/freecodecamp/" target="_blank">FreeCodeCamp Projects</a></li>
+					<a href="https://github.com/joaquinmetayer" target="_blank">GitHub</a>
 					<br>
-					<li><a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">YouTube</a></li>
-					<li><a href="https://www.instagram.com/joaquinmetayer/" target="_blank">Instagram</a></li>
+					<a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ" target="_blank">YouTube</a>
 					<br>
-					<li><a href="https://joaquinmetayer.github.io/pharchives/" target="_blank">Photo Archives</a></li>
-					<li><a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC "Recuerdos de un EX Trader"</a></li>
-				    </ul>
+					<a href="https://www.instagram.com/joaquinmetayer/" target="_blank">Instagram</a>
+					</p>
+					<p>
+					<a href="https://joaquinmetayer.github.io/freecodecamp/" target="_blank">FreeCodeCamp Projects</a>
+					<br>
+					<a href="https://joaquinmetayer.github.io/pharchives/" target="_blank">Photo Archives</a>
+					<br>
+					<a href="https://joaquinmetayer.github.io/2388hc/" target="_blank">2388HC "Recuerdos de un EX Trader"</a>
+			
 					</p>
 					<br>
 					<img src="./posts/img/Screen Shot 2022-07-14 at 01.09.38.png">
