--- a/posts.html
+++ b/posts.html
@@ -30,7 +30,7 @@
 			<ul>
 <!--
 				<li class="postli">
-					<a class="postnl" href="./posts/scriptautomator.html">Script para gestionar lotes de imagenes facil en macOS</a>
+					<a class="postnl" href="./posts/scriptautomator.html">Script para gestionar lotes de imágenes en macOS</a>
 				</li>
 				<li class="postli">
 					<a class="postnl" href="./posts/fccrwdexpopcrea.html">FreeCodeCamp Responsive Web Design, que aprendi?</a>
